<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/color_green"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fill_your_information_below"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:padding="12dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext_background"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext_background"
            android:textColor="#333333"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:padding="12dp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/edittext_background"
                android:textColor="#333333" />

            <ImageView
                android:id="@+id/passwordToggle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_visibility_off" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular">

            <CheckBox
                android:id="@+id/termsCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_with_terms_conditions"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular" />
        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/color_green"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            app:cornerRadius="10dp"
            android:padding="12dp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/footerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/color_green"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
</ScrollView>
