<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/onboarding_screens" />

    <FrameLayout
        android:id="@+id/onboarding_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/color_green"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/skipButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/color_beige"
        android:textColor="@android:color/white"/>

</LinearLayout>
