<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="12dp">

        <!-- Foto -->
        <ImageView
            android:id="@+id/imgNewsThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            android:src="@drawable/food_1"
            android:contentDescription="@string/news_image" />

        <!-- Judul Berita -->
        <TextView
            android:id="@+id/tvNewsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/imgNewsThumbnail"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/news_title" />

        <!-- Deskripsi Singkat -->
        <TextView
            android:id="@+id/tvNewsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNewsTitle"
            android:layout_toStartOf="@id/imgNewsThumbnail"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/desc" />

        <!-- Waktu Upload -->
        <TextView
            android:id="@+id/tvNewsTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNewsDescription"
            android:layout_toStartOf="@id/imgNewsThumbnail"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_italic"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/time" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
